# motion_control_firmware

./: .ccsproject  .cproject  .project  2838x_flash_lnk_cpu1.cmd  CMakeLists.txt  README.md  helpers.c  helpers.h  main.c  main.h
.launches/: qepm_extraction.launch  upravljanje_kretanja_firmware.launch
Debug/: ccsObjs.opt  helpers.d  main.d  makefile  objects.mk  qepm_extraction.map  qepm_extraction.out  qepm_extraction_linkInfo.xml  sources.mk  subdir_rules.mk  subdir_vars.mk
Debug/bsp/: F2837xD_Adc.d  F2837xD_CpuTimers.d  F2837xD_DefaultISR.d  F2837xD_EPwm.d  F2837xD_EQep.d  F2837xD_GlobalVariableDefs.d  F2837xD_Gpio.d  F2837xD_Ipc.d  F2837xD_PieCtrl.d  F2837xD_PieVect.d  F2837xD_SysCtrl.d  subdir_rules.mk  subdir_vars.mk
Debug/drivers/src/: control.d  encoder.d  lp_filter.d  motor.d  subdir_rules.mk  subdir_vars.mk  trajectory.d
Debug/hal/src/: adc_hal.d  dac_hal.d  encoder_hal.d  subdir_rules.mk  subdir_vars.mk
bsp/: F2837xD_PieVect.c  scistdio.c
docs/: desktop.ini
drivers/: CMakeLists.txt
drivers/inc/: control.h  encoder.h  lp_filter.h  motor.h  trajectory.h  trajectory_lut.h
drivers/src/: control.c  encoder.c  lp_filter.c  motor.c  trajectory.c
external_tools/response_capture_serial/: README.txt  serial_read.py  visualise_data.py
hal/inc/: adc_hal.h  dac_hal.h  encoder_hal.h  serial.h
hal/src/: adc_hal.c  dac_hal.c  encoder_hal.c  serial.c
targetConfigs/: TMS320F28378D.ccxml  TMS320F28379D.ccxml
